--- a/header.html
+++ b/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,24 +9,25 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <div class="container">
-            <nav class="nav navbar-nav navbar-left">
-                <ul>
-                    <li style="font-weight: 500;">Home</li>
-                    <li>Product</li>
-                    <li>About us</li>
-                </ul>
-            </nav>
-            <nav class="nav navbar-nav navbar-right">
-                <button class="btn btn--login-in"><a href="">Log In</a></button>
-                <button class="btn btn--sign-up"><a href="">Sign up</a></button>
-            </nav>
-        </div>
+        <nav class="nav navbar-nav navbar-left">
+            <ul>
+                <li style="font-weight: 500;">Home</li>
+                <li>Product</li>
+                <li>About us</li>
+            </ul>
+        </nav>
+        <nav class="nav navbar-nav navbar-right" style="display: flex; align-items: center;">
+            <button class="btn btn--login-in">Log In</button>
+            <button class="btn btn--sign-up">Sign up</button>
+        </nav>
     </header>
     <h2>90% of students who use Quizlet report receiving higher marks</h2>
 </body>
+
 </html>
