--- a/header.html
+++ b/header.html
@@ -9,15 +9,14 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav class="nav navbar-nav navbar-left">
             <ul>
-                <li style="font-weight: 500;">Home</li>
+                <li>Home</li>
                 <li>Product</li>
                 <li>About us</li>
             </ul>
@@ -27,6 +26,21 @@
             <button class="btn btn--sign-up">Sign up</button>
         </nav>
     </header>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
+    <h2>90% of students who use Quizlet report receiving higher marks</h2>
     <h2>90% of students who use Quizlet report receiving higher marks</h2>
 </body>
 
